V1 validate token (protected routes)

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,8 @@ MONGODB_URI= mongodb+srv://ingamirhurtado:I6jAaExCwQtywJl5@cluster0.3wnvn.mongod
 
 PORT=3000
 
-SECRET = "Limon1040"
+JWT_SECRET = "Limon1040"
+
+CLOUDINARY_CLOUD_NAME = "dvbyztruy"
+CLOUDINARY_API_KEY = "587376861144781"
+CLOUDINARY_API_SECRET = "ASvHPQK3r0m_64Pa7p0gYi0K7r0"
